--- a/app/templates/play/overview.html
+++ b/app/templates/play/overview.html
@@ -144,17 +144,21 @@
                 height: 300px;
                 max-width: 400px;
                 overflow-y: auto;
-                border: 1px solid lightgray;
                 padding: 10px;
+                background-color: #1a1a1a;
+                border: 1px solid #333;
+                border-left: 2px solid #555;
+                border-top: 2px solid #555;
+                border-radius: 4px;
+                box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
             }
         </style>
         <div class="expand"><!-- righthand column -->
             <div class="scrollable">
                 {% for entry in log_messages %}
-                    {% set message, count = entry %}
-                    <p style="color: tan;">{{ message | safe }}
-                        {% if count > 1 %}
-                        <span class="label-like"> (x{{ count }})</span>
+                    <p style="color: tan;">{{ entry.message | safe }}
+                        {% if entry.count > 1 %}
+                        <span class="label-like"> (x{{ entry.count }})</span>
                         {% endif %}
                     </p>
                 {% endfor %}
