Hide hotkeys on mobile.

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -56,6 +56,11 @@ a:hover {
 .expand {
     flex: 1;
 }
+@media (max-width: 768px) {
+    .hotkey-indicator {
+        display: none;
+    }
+}
 
 .flexdiv {
     display: flex;
