--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,6 +14,9 @@
         <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='favicon-32x32.png') }}">
         <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script>
+            const isMobile = /Mobi|Android/i.test(navigator.userAgent);
+        </script>
     </head>
     <body>
         <!-- Upper Left menu block -->
