--- a/app/templates/configure/character.html
+++ b/app/templates/configure/character.html
@@ -277,7 +277,7 @@
                 }
             });
 
-            function addAttrib(attribId, attribName, isBinary, enumVals, attribVal = 1) {
+            function addAttrib(attribId, attribName, isBinary, enumVals, attribVal = "1") {
                 const attribHtml = `
                     <tr>
                         <td>${attribName}
@@ -292,7 +292,7 @@
                             : isBinary 
                                 ? `<input type="checkbox"
                                           name="attrib${attribId}_val"
-                                          value="1" ${attribVal === 1 ? 'checked' : ''}>` 
+                                          value="1" ${attribVal === "1" ? 'checked' : ''}>` 
                                 : `<input type="text"
                                           name="attrib${attribId}_val"
                                           value="${attribVal}"
