--- a/app/templates/configure/scenarios.html
+++ b/app/templates/configure/scenarios.html
@@ -14,6 +14,9 @@
         };
         const funcForKey = {};
         document.addEventListener('DOMContentLoaded', () => {
+            if (isMobile) {
+                return;
+            }
             document.addEventListener('keypress', (event) => {
                 const key = event.key.toLowerCase();
                 if (linkForKey[key]) {
@@ -63,7 +66,7 @@
                         <button type="submit"
                                 id="submit_load_scenario_{{ scenario_id }}">
                             Load Scenario
-                            [{{ letter }}]
+                            <span class="hotkey-indicator">[{{ letter }}]</span>
                         </button>
                         <script>
                         funcForKey['{{ letter }}'] = () => {
