--- a/app/templates/play/overview.html
+++ b/app/templates/play/overview.html
@@ -12,6 +12,9 @@
             'm': '{{ url_for('configure_index') }}',
         };
         document.addEventListener('DOMContentLoaded', () => {
+            if (isMobile) {
+                return;
+            }
             document.addEventListener('keypress', (event) => {
                 const key = event.key.toLowerCase();
                 if (linkForKey[key]) {
@@ -53,7 +56,7 @@
                                     {% set link = url_for('play_char', char_id=char.char_id) %}
                                     {% set letter = link_letters.next(link) %}
                                     <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
-                                    <span>[{{ letter }}]</span>
+                                    <span class="hotkey-indicator">[{{ letter }}]</span>
                                     <a href="{{ link }}">{{ char.char_name }}</a>
                                 {% endif %}
                             </td>
@@ -62,7 +65,7 @@
                                     {% set link = url_for('play_location', loc_id=char.loc_id) %}
                                     {% set letter = link_letters.next(link) %}
                                     <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
-                                    <span>[{{ letter }}]</span>
+                                    <span class="hotkey-indicator">[{{ letter }}]</span>
                                     <a href="{{ link }}">{{ char.loc_name }}</a>
                                 {% endif %}
                             </td>
@@ -82,7 +85,7 @@
                         <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
                         <tr>
                             <td>
-                                <span>[{{ letter }}]</span>
+                                <span class="hotkey-indicator">[{{ letter }}]</span>
                                 <a href="{{ link }}">{{ loc.name }}</a>
                             </td>
                         </tr>
@@ -103,7 +106,7 @@
                         <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
                         <tr>
                             <td>
-                                <span>[{{ letter }}]</span>
+                                <span class="hotkey-indicator">[{{ letter }}]</span>
                                 <a href="{{ link }}">{{ item.name }}</a>
                             </td>
                             <td id="item-{{ item.id }}-quantity">
@@ -116,7 +119,7 @@
                                         {% set link = url_for('play_attrib', attrib_id=attrib_of.attrib_id, subject_type='item', subject_id=item.id) %}
                                         {% set letter = link_letters.next(link) %}
                                         <script>linkForKey['{{ letter }}'] = "{{ link|safe }}";</script>
-                                        <span>[{{ letter }}]</span>
+                                        <span class="hotkey-indicator">[{{ letter }}]</span>
                                         <a href="{{ link }}">{{ attrib_of.attrib.name }}</a>{% if not attrib_of.attrib.binary %}<span>:</span>{% endif %}
                                         {% if attrib_of.attrib.enum %}
                                             {% set index = attrib_of.val | int %}
